--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="skill">
     <h4>Discovery & Research</h4>
     <div class="image">
-    <img src="images/research.svg" alt="Discovery & Research">
+    <img src="images/researchhome.svg" alt="Discovery & Research">
   </div>
     <ul>
       <li>Competitive Analysis</li>
@@ -94,7 +94,7 @@
   <div class="skill">
     <h4>Information Architecture</h4>
     <div class="image">
-    <img src="images/IA.svg" alt="Information Architecture">
+    <img src="images/IAhome.svg" alt="Information Architecture">
   </div>
     <ul>
       <li>User Stories</li>
@@ -106,7 +106,7 @@
   <div class="skill">
     <h4>Visual Design</h4>
       <div class="image">
-        <img src="images/visualdesign.svg" alt="Visual Design">
+        <img src="images/visualdesignhome.svg" alt="Visual Design">
       </div>
     <ul>
       <li>Branding & Identity</li>
@@ -118,7 +118,7 @@
   <div class="skill">
     <h4>User Testing</h4>
     <div class="image">
-    <img src="images/testing.svg" alt="User testing">
+    <img src="images/testinghome.svg" alt="User testing">
   </div>
     <ul>
       <li>Clickable Prototype</li>
@@ -129,7 +129,7 @@
   <div class="skill">
     <h4>Development</h4>
     <div class="image">
-    <img src="images/development.svg" alt="Development">
+    <img src="images/developmenthome.svg" alt="Development">
   </div>
     <ul>
       <li>HTML / CSS</li>
